fixed gap between artist and contact sections on mobile screens

--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ header.sticky {
   padding: 0.2125rem 1.25rem;
   background-image: linear-gradient(
     to right,
-    rgba(0, 0, 0, 0.5),
-    rgba(255, 0, 0, 0)
+    rgba(0, 0, 0, 0.8),
+    rgba(255, 255, 255, 0.1)
   );
 }
 
@@ -416,9 +416,9 @@ form .textarea-field .error-txt {
   /* artist section */
 
   .gallery {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    gap: 1.4rem;
-    padding: 1.25rem;
+    grid-template-columns: repeat(auto-fill, minmax(115px, 1fr));
+    gap: 1.1rem;
+    padding: 0.8rem 1.25rem;
   }
 
   .gallery-container {
@@ -431,7 +431,7 @@ form .textarea-field .error-txt {
   }
 
   .artist h1 {
-    font-size: 1.9rem;
+    font-size: 1.7rem;
     margin-top: 2.1rem;
     font-weight: 400;
   }
